[package]
name = "foray-into-bevy"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18.0", default-features = false, features = [
"2d",
"dev",
"experimental_bevy_ui_widgets",
"dynamic_linking",
] }

# optimize the dev profile a bit
[profile.dev]
opt-level = 1

# optimize the dependencies in the dev profile even more
[profile.dev.package."*"]
opt-level = 3
